--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,3 +3,7 @@ site_url: https://example.com/
 theme:
   name: null
   custom_dir: custom_theme/
+nav:
+  - '@Home HRI': index.md
+  - 'User manual': user_manual.md
+repo_url: https://github.com/AYM1607/AtHomeHRI
