--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: HRI User Docs
-site_url: https://example.com/
+site_url: https://eskrr.github.io/hri_docs/site/
 theme:
   name: null
   custom_dir: custom_theme/
